# scc-spbstu-master2025

./: .gitignore  CMakeLists.txt  README.md  header.tex  report.md
common/: CMakeLists.txt  qap.c  qap.h
data/: README.md  lipa90b.dat.opt  tai50b.dat.opt
mpi/: main.c
mpipy/: main.py
openmp/: main.c
pthreads/: average_trace.csv  main.c  run
single_thread/: CMakeLists.txt  main.c  sa_single.c
tests/: CMakeLists.txt  common_tests.c
tests/utils/: utils.c  utils.h
